# proptest-recurse

./: Cargo.toml  README.md
src/: lib.rs  recursive.rs
tests/: mutual.rs
