[package]
name = "proptest-recurse"
description = "Helper for defining mutually recursive strategies with proptest."
version = "0.2.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/proptest-recurse"
documentation = "https://docs.rs/proptest-recurse"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
proptest = "0.8.6"
im = "~12"

[dev-dependencies]