[package]
name = "proptest-recurse"
description = "Helper for defining mutually recursive strategies with proptest."
version = "0.5.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/proptest-recurse"
documentation = "https://docs.rs/proptest-recurse"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
proptest = "1.0.0"
im = "~15"

[dev-dependencies]
